--- a/main/login.html
+++ b/main/login.html
@@ -8,7 +8,7 @@
             <label for='lastname'>Lastname</label>
             <input type="text" id="lastname" ng-model="lastname" required>
         </div>
-        <button type="submit" class="btn-login">Login</button>
+        <button type="submit" class="btn-login" ng-click='loginSubmit()'>Login</button>
         <span class="login-error" >{{error}}</span>
     </form>
 </div>
